--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -88,18 +88,18 @@ permalink: /banzo/
 			<form role="form" action="http://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
 				<div class="form-row">
-    				<div class="col">
+    				<div class="col-sm-6">
 						<input type="name" class="form-control" id="inputDate" placeholder="Event Date">
 					</div>
-					<div class="col">
+					<div class="col-sm-6">
 						<input type="name" class="form-control" id="inputTime" placeholder="Event time">
 					</div>
 				</div>
 				<div class="form-row">
-					<div class="col">
+					<div class="col-sm-6">
 						<input type="name" class="form-control" id="inputGuests" placeholder="Number of guests">
 					</div>
-					<div class="col">
+					<div class="col-sm-6">
 						<input type="email" class="form-control" id="inputEmail" placeholder="Your email">
 					</div>
 				</div>
