--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -26,20 +26,19 @@ permalink: /banzo/
 	</div>
 
 	<div class="row">
-		<div class="col no-pad">
-			<img src="/images/banzo-2.jpg" width="100%">
+		<div class="col-sm no-pad parallax-window" data-parallax="scroll" data-image-src="/images/banzo-2.jpg">
 		</div>
 	</div>
 
 	<div class="row pad6vw">
-		<div class="col pad02vw">
+		<div class="col-md pad02vw">
 			<h2 class="title">Order Online</h2>
 			<p>Don't get up.<br>Make an order while sitting right where you are.</p>
 			<a href="#">
 				<button type="button" class="btn btn-dark">ORDER ONLINE</button>
 			</a>
 		</div>
-		<div class="col pad02vw">
+		<div class="col-md pad02vw">
 			<h2 class="title">Opening Times</h2>
 			<p>Monday: 11:00a &ndash; 9:00p<br>
 				Tuesday: 11:00a &ndash; 9:00p<br>
@@ -50,7 +49,7 @@ permalink: /banzo/
 				Sunday: 11:00a &ndash; 9:00p
 			</p>
 		</div>
-		<div class="col pad02vw">
+		<div class="col-md pad02vw">
 			<h2 class="title">Contact</h2>
 			<p>2105 Sherman Ave<br>Madison, WI 53704</p>
 			<a href="#">
@@ -70,8 +69,7 @@ permalink: /banzo/
 	</div>
 
 	<div class="row">
-		<div class="col no-pad">
-			<img src="/images/banzo-4.jpg" width="100%">
+		<div class="col no-pad parallax-window" data-parallax="scroll" data-image-src="/images/banzo-4.jpg">
 		</div>
 	</div>
 
@@ -88,18 +86,18 @@ permalink: /banzo/
 			<form role="form" action="http://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
 				<div class="form-row">
-    				<div class="col-sm-6">
+    				<div class="col-sm">
 						<input type="name" class="form-control" id="inputDate" placeholder="Event Date">
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm">
 						<input type="name" class="form-control" id="inputTime" placeholder="Event time">
 					</div>
 				</div>
 				<div class="form-row">
-					<div class="col-sm-6">
+					<div class="col-sm">
 						<input type="name" class="form-control" id="inputGuests" placeholder="Number of guests">
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm">
 						<input type="email" class="form-control" id="inputEmail" placeholder="Your email">
 					</div>
 				</div>
