--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -24,20 +24,46 @@ permalink: /food-carts/
 	</div>
 
 	<div class="row">
-		<div class="col no-pad">
-			<img src="http://via.placeholder.com/1200x500" width="100%">
+		<div class="col no-pad parallax-window" data-parallax="scroll" data-image-src="/images/foodcart-1.jpg">
 		</div>
 	</div>
 
 	<div class="row pad6vw">
-		<div class="col block">
-			<img src="http://via.placeholder.com/500x500" width="100%">
+		<div class="col-md pad02vw">
+			<h2 class="title">LIBRARY MALL<br>(LAKE &amp; STATE)</h2>
+			<p>Tuesday: 11:00a &ndash; 2:30p<br>
+				Thursday: 11:00a &ndash; 2:30p
+			</p>
 		</div>
-		<div class="col block">
-			<img src="http://via.placeholder.com/500x500" width="100%">
+		<div class="col-md pad02vw">
+			<h2 class="title">CAPITAL SQUARE<br>(MLK BLVD)</h2>
+			<p>Monday: 11:00a &ndash; 2:30p<br>
+				Wednesday: 11:00a &ndash; 2:30p<br>
+				Friday: 11:00a &ndash; 2:30p<br>
+			</p>
 		</div>
-		<div class="col block">
-			<img src="http://via.placeholder.com/500x500" width="100%">
+		<div class="col-md pad02vw">
+			<h2 class="title">DANE CO. FARMERS MARKET<br>(MIFFLIN ST)</h2>
+			<p>Saturday: 11:00a &ndash; 2:00p</p>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col center">
+			<p><em>*Cart schedule subject to frequent change.  Check social media or call store for most up-to-date locations.</em></p>
+			<p><a href="#cart-locations" class="scroll green">View map</a><br>
+			<a style="color:#000;" href="tel:6084412002">(608) 441-2002</a></p>
+			<p>
+				<a style="color:#000;" href="https://www.facebook.com/banzomadison/" target="_blank">
+					<i class="fa fa-facebook" aria-hidden="true"></i>
+				</a>
+				<a style="color:#000;" href="https://twitter.com/banzomadison/" target="_blank">
+					<i class="fa fa-twitter" aria-hidden="true"></i>
+				</a>
+				<a style="color:#000;" href="https://www.instagram.com/banzomadison/" target="_blank">
+					<i class="fa fa-instagram" aria-hidden="true"></i>
+				</a>
+			</p>
 		</div>
 	</div>
 
