--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -7,7 +7,7 @@ permalink: /food-carts/
 <div class="container-fluid">
 	<div class="row full-height carts-feature d-flex align-items-center">
 		<div class="col d-flex justify-content-center">
-			<h1>hey hey</h1>
+			<img src="/images/cart-01.png" width="100%" style="max-width: 210px;">
 		</div>
 
 		<a class="feature-arrow-down" href="#twitter">
@@ -15,7 +15,7 @@ permalink: /food-carts/
 		</a>
 	</div>
 
-	<div class="row">
+	<div id="about" class="row">
 		<div class="col">
 			<div class="article">
 				<p>This is where it all began. The bright green Banzo cart first rolled on to the streets of Madison back in 2011 and has been voted one of the city’s favorites ever since. Our famous falafel is only fried fresh. We grind the mix from the highest quality ingredients and make it from scratch, just like everything else on our menu. Now with two food carts, you’ll find us downtown and on campus for lunch. And watch for us to pop up at all of Madison’s hottest festivals, concerts, and other events. Vegan? No problem. Gluten free? We’ve got you covered. Craving hand-made grilled beef kebabs in the best pita bread in town? Yup, we do that. Banzo is truly street food at it’s finest.</p>
