lots of development
too much to describe

--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -12,7 +12,7 @@ permalink: /banzo/
 			<img src="/images/banzo-01.png" width="100%" style="max-width: 210px;">
 		</div>
 
-		<a class="feature-arrow-down link-to-next" href="#twitter">
+		<a class="feature-arrow-down link-to-next" href="#about">
 			<i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i>
 		</a>
 	</div>
@@ -34,7 +34,7 @@ permalink: /banzo/
 		<div class="col-md pad02vw">
 			<h2 class="title">Order Online</h2>
 			<p>Don't get up.<br>Make an order while sitting right where you are.</p>
-			<a href="#">
+			<a href="https://www.orderinout.com/banzo/madison-east" target="_blank>
 				<button type="button" class="btn btn-dark">ORDER ONLINE</button>
 			</a>
 		</div>
@@ -49,10 +49,10 @@ permalink: /banzo/
 				Sunday: 11:00a &ndash; 9:00p
 			</p>
 		</div>
-		<div class="col-md pad02vw">
+		<div class="col-md pad02vw banzo-social">
 			<h2 class="title">Contact</h2>
 			<p>2105 Sherman Ave<br>Madison, WI 53704</p>
-			<a href="#">
+			<a href="#map" class="scroll">
 				View map
 			</a>
 			<p>(608) 441-2002</p>
@@ -73,7 +73,7 @@ permalink: /banzo/
 		</div>
 	</div>
 
-	<div class="row pad6vw d-flex justify-content-center">
+	<div id="menu" class="row pad6vw d-flex justify-content-center">
 		<div class="col-8">
 			<h2 class="title">Restaurant Menu <a href="#"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
 		</div>
@@ -109,7 +109,7 @@ permalink: /banzo/
 		</div>
 	</div>
 
-	<div class="row">
+	<div id="map" class="row">
 		<div class="col no-pad">
 			<div class="map-overlay" onClick="style.pointerEvents='none'"></div>
 			<style>
