--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -49,9 +49,9 @@ permalink: /food-carts/
 	</div>
 
 	<div class="row">
-		<div class="col center">
+		<div class="col center banzo-social">
 			<p><em>*Cart schedule subject to frequent change.  Check social media or call store for most up-to-date locations.</em></p>
-			<p><a href="#cart-locations" class="scroll green">View map</a><br>
+			<p><a href="#map" class="scroll green">View map</a><br>
 			<a style="color:#000;" href="tel:6084412002">(608) 441-2002</a></p>
 			<p>
 				<a style="color:#000;" href="https://www.facebook.com/banzomadison/" target="_blank">
@@ -68,6 +68,20 @@ permalink: /food-carts/
 	</div>
 
 	<div class="row">
+		<div class="col no-pad parallax-window" data-parallax="scroll" data-image-src="/images/foodcart-4.jpg">
+		</div>
+	</div>
+
+	<div id="menu" class="row pad6vw d-flex justify-content-center">
+		<div class="col-8">
+			<h2 class="title">LAKE / STATE <a href="/pdf/lakeState.pdf" target="_blank"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
+		</div>
+		<div class="col-8">
+			<h2 class="title">CAPITAL SQUARE <a href="/pdf/capitalSquare-daytonCharter.pdf" target="_blank"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
+		</div>
+	</div>
+
+	<div id="map" class="row">
 		<div class="col no-pad">
 			<div class="map-overlay" onClick="style.pointerEvents='none'"></div>
 			<style>
