--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -12,7 +12,7 @@ permalink: /banzo/
 			<img src="/images/banzo-01.png" width="100%" style="max-width: 210px;">
 		</div>
 
-		<a class="feature-arrow-down link-to-next" href="#about">
+		<a class="feature-arrow-down scroll" href="#about">
 			<i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i>
 		</a>
 	</div>
@@ -26,15 +26,15 @@ permalink: /banzo/
 	</div>
 
 	<div class="row">
-		<div class="col-sm no-pad parallax-window" data-parallax="scroll" data-image-src="/images/banzo-2.jpg">
-		</div>
+		<div class="col no-pad parallax-window d-sm-none d-md-block" data-parallax="scroll" data-image-src="/images/banzo-2.jpg"></div>
+		<div class="col no-pad parallax-window d-none d-sm-block d-md-none" data-parallax="scroll" data-image-src="/images/banzo-2-m.jpg"></div>
 	</div>
 
-	<div class="row pad6vw">
+	<div id="contact" class="row pad6vw">
 		<div class="col-md pad02vw">
 			<h2 class="title">Order Online</h2>
 			<p>Don't get up.<br>Make an order while sitting right where you are.</p>
-			<a href="https://www.orderinout.com/banzo/madison-east" target="_blank>
+			<a href="https://www.orderinout.com/banzo/madison-east" target="_blank">
 				<button type="button" class="btn btn-dark">ORDER ONLINE</button>
 			</a>
 		</div>
@@ -69,16 +69,16 @@ permalink: /banzo/
 	</div>
 
 	<div class="row">
-		<div class="col no-pad parallax-window" data-parallax="scroll" data-image-src="/images/banzo-4.jpg">
-		</div>
+		<div class="col no-pad parallax-window d-sm-none d-md-block" data-parallax="scroll" data-image-src="/images/banzo-4.jpg"></div>
+		<div class="col no-pad parallax-window d-none d-sm-block d-md-none" data-parallax="scroll" data-image-src="/images/banzo-4-m.jpg"></div>
 	</div>
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center">
-		<div class="col-8">
+		<div class="col-md-8">
 			<h2 class="title">Restaurant Menu <a href="#"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
 		</div>
 		<div class="clearfix"></div>
-		<div class="col-8">
+		<div class="col-md-8">
 			<h2 class="title">Event Catering <a href="#"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 			
 			<p>Tell us about your event! We'll take care of the rest.</p>
