--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -79,7 +79,7 @@ permalink: /food-carts/
 		<div class="col-md-8">
 			<h2 class="title">Food Cart @ CAPITAL SQUARE <a href="/pdf/capitalSquare-daytonCharter.pdf" target="_blank"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
 		</div>
-		<div class="col-md-8">
+		<!-- <div class="col-md-8">
 			<h2 class="title">Event Catering <a href="#"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 			
 			<p>Tell us about your event! We'll take care of the rest.</p>
@@ -107,7 +107,7 @@ permalink: /food-carts/
   				</div>
   				<button type="submit" value="send" name="submit" class="btn btn-primary">Submit</button>
 			</form>
-		</div>
+		</div> -->
 	</div>
 
 	<div id="map" class="row">
