--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -73,7 +73,7 @@ permalink: /banzo/
 		<div class="col no-pad parallax-window d-none d-sm-block d-md-none" data-parallax="scroll" data-image-src="/images/banzo-4-m.jpg"></div>
 	</div>
 
-	<div id="menu" class="row pad6vw d-flex justify-content-center">
+	<!-- <div id="menu" class="row pad6vw d-flex justify-content-center">
 		<div class="col-md-8">
 			<h2 class="title">Restaurant Menu <a href="#"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
 		</div>
@@ -81,7 +81,7 @@ permalink: /banzo/
 		<div class="col-md-8">
 			<h2 class="title">Event Catering <a href="#"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 			
-			<p>Tell us about your event! We'll take care of the rest.</p>
+			<p>Tell us about your event! We'll take care of the rest. *no requesst are confirmed until approval is received from our catering team*</p>
 
 			<form role="form" action="http://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
@@ -107,7 +107,7 @@ permalink: /banzo/
   				<button type="submit" value="send" name="submit" class="btn btn-primary">Submit</button>
 			</form>
 		</div>
-	</div>
+	</div> -->
 
 	<div id="map" class="row">
 		<div class="col no-pad">
