--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -79,35 +79,35 @@ permalink: /food-carts/
 		<div class="col-md-8">
 			<h2 class="title">Food Cart @ CAPITAL SQUARE <a href="/pdf/capitalSquare-daytonCharter.pdf" target="_blank"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
 		</div>
-		<!-- <div class="col-md-8">
+		<div class="col-md-8">
 			<h2 class="title">Event Catering <a href="#"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 			
 			<p>Tell us about your event! We'll take care of the rest.</p>
 
 			<form role="form" action="http://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
-				<div class="form-row">
+				<div class="form-group row">
     				<div class="col-sm">
-						<input type="name" class="form-control" id="inputDate" placeholder="Event Date">
+						<input type="text" name="date" class="form-control" id="inputDate" placeholder="Event Date">
 					</div>
 					<div class="col-sm">
-						<input type="name" class="form-control" id="inputTime" placeholder="Event time">
+						<input type="text" name="time" class="form-control" id="inputTime" placeholder="Event time">
 					</div>
 				</div>
-				<div class="form-row">
+				<div class="form-group row">
 					<div class="col-sm">
-						<input type="name" class="form-control" id="inputGuests" placeholder="Number of guests">
+						<input type="text" name="guest-number" class="form-control" id="inputGuests" placeholder="Number of guests">
 					</div>
 					<div class="col-sm">
-						<input type="email" class="form-control" id="inputEmail" placeholder="Your email">
+						<input type="email" name="email" class="form-control" id="inputEmail" placeholder="Your email">
 					</div>
 				</div>
-  				<div class="form-row">
-					<textarea type="text" class="form-control" id="contact-message" rows="5" placeholder="Additional information"></textarea>
+  				<div class="form-group row">
+					<textarea type="text" name="aditional-info" class="form-control" id="contact-message" rows="5" placeholder="Additional information"></textarea>
   				</div>
   				<button type="submit" value="send" name="submit" class="btn btn-primary">Submit</button>
 			</form>
-		</div> -->
+		</div>
 	</div>
 
 	<div id="map" class="row">
