--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ permalink: /
 				<a href="https://www.orderinout.com/banzo/madison-east" target="_blank">
 					<button type="button" class="btn btn-dark">ORDER ONLINE</button>
 				</a></h2>
-				<!-- <h2 class="title">For Event Catering:<br><br>
+				<h2 class="title">For Event Catering:<br><br>
 				<a href="#menu" class="scroll hp-cater">
 					<button type="button" class="btn btn-dark">Click Here!</button>
-				</a></h2> -->
+				</a></h2>
 			</div>
 		</div>
 	</div>
@@ -54,24 +54,24 @@ permalink: /
 
 			<form role="form" action="http://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
-				<div class="form-row">
+				<div class="form-group row">
     				<div class="col-sm">
-						<input type="name" class="form-control" id="inputDate" placeholder="Event Date">
+						<input type="text" name="date" class="form-control" id="inputDate" placeholder="Event Date">
 					</div>
 					<div class="col-sm">
-						<input type="name" class="form-control" id="inputTime" placeholder="Event time">
+						<input type="text" name="time" class="form-control" id="inputTime" placeholder="Event time">
 					</div>
 				</div>
-				<div class="form-row">
+				<div class="form-group row">
 					<div class="col-sm">
-						<input type="name" class="form-control" id="inputGuests" placeholder="Number of guests">
+						<input type="text" name="guest-number" class="form-control" id="inputGuests" placeholder="Number of guests">
 					</div>
 					<div class="col-sm">
-						<input type="email" class="form-control" id="inputEmail" placeholder="Your email">
+						<input type="email" name="email" class="form-control" id="inputEmail" placeholder="Your email">
 					</div>
 				</div>
-  				<div class="form-row">
-					<textarea type="text" class="form-control" id="contact-message" rows="5" placeholder="Additional information"></textarea>
+  				<div class="form-group row">
+					<textarea type="text" name="aditional-info" class="form-control" id="contact-message" rows="5" placeholder="Additional information"></textarea>
   				</div>
   				<button type="submit" value="send" name="submit" class="btn btn-primary">Submit</button>
 			</form>
