--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -84,7 +84,7 @@ permalink: /food-carts/
 			
 			<p>Tell us about your event! We'll take care of the rest.</p>
 
-			<form role="form" action="http://formspree.io/catering.banzo@gmail.com" method="POST">
+			<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
 				<div class="form-group row">
     				<div class="col-sm">
