--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -83,7 +83,7 @@ permalink: /banzo/
 			
 			<p>Tell us about your event! We'll take care of the rest. *no requesst are confirmed until approval is received from our catering team*</p>
 
-			<form role="form" action="http://formspree.io/catering.banzo@gmail.com" method="POST">
+			<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
 				<div class="form-group row">
     				<div class="col-sm">
