--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ permalink: /
 
 	<div id="menu" class="row justify-content-center collapse">
 		<div class="col-md-8">
-			<h2 class="title">Event Catering <a href="#"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
+			<h2 class="title">Event Catering <!-- <a href="#"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a> --></h2>
 			
 			<p>Tell us about your event! We'll take care of the rest. *no requesst are confirmed until approval is received from our catering team*</p>
 
