--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -74,12 +74,12 @@ permalink: /banzo/
 	</div>
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center">
-		<!-- <div class="col-md-8">
-			<h2 class="title">Restaurant Menu <a href="#"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
-		</div>
-		<div class="clearfix"></div> -->
 		<div class="col-md-8">
-			<h2 class="title">Event Catering <!-- <a href="#"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a> --></h2>
+			<h2 class="title">Restaurant Menu <a href="/pdf/menu.pdf" target="_blank"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
+		</div>
+		<div class="clearfix"></div>
+		<div class="col-md-8">
+			<h2 class="title">Event Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 			
 			<p>Tell us about your event! We'll take care of the rest. *no requesst are confirmed until approval is received from our catering team*</p>
 
