--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -30,20 +30,20 @@ permalink: /food-carts/
 
 	<div id="contact" class="row pad6vw">
 		<div class="col-md pad02vw">
-			<h2 class="title">LIBRARY MALL<br>(LAKE &amp; STATE)</h2>
-			<p>Tuesday: 11:00a &ndash; 2:30p<br>
-				Thursday: 11:00a &ndash; 2:30p
+			<h2 class="title">LIBRARY MALL<br>(Lake &amp; State St)</h2>
+			<p>Tuesday: 11:00a &ndash; 2:00p<br>
+				Thursday: 11:00a &ndash; 2:00p
 			</p>
 		</div>
 		<div class="col-md pad02vw">
-			<h2 class="title">CAPITAL SQUARE<br>(MLK BLVD)</h2>
-			<p>Monday: 11:00a &ndash; 2:30p<br>
-				Wednesday: 11:00a &ndash; 2:30p<br>
-				Friday: 11:00a &ndash; 2:30p<br>
+			<h2 class="title">CAPITAL SQUARE<br>(King &amp; Main St)</h2>
+			<p>Monday: 11:00a &ndash; 2:00p<br>
+				Wednesday: 11:00a &ndash; 2:00p<br>
+				Friday: 11:00a &ndash; 2:00p<br>
 			</p>
 		</div>
 		<div class="col-md pad02vw">
-			<h2 class="title">DANE CO. FARMERS MARKET<br>(MIFFLIN ST)</h2>
+			<h2 class="title">DANE CO. FARMERS MARKET<br>(2017 Season now closed)</h2>
 			<p>Saturday: 11:00a &ndash; 2:00p</p>
 		</div>
 	</div>
@@ -80,12 +80,17 @@ permalink: /food-carts/
 			<h2 class="title">Food Cart @ CAPITAL SQUARE <a href="/pdf/capitalSquare-daytonCharter.pdf" target="_blank"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
 		</div>
 		<div class="col-md-8">
-			<h2 class="title">Event Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
+			<h2 class="title">Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 			
 			<p>Tell us about your event! We'll take care of the rest.</p>
 
 			<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
+				<div class="form-group row">
+    				<div class="col-sm">
+						<input type="text" name="name" class="form-control" id="inputName" placeholder="Your Name">
+					</div>
+				</div>
 				<div class="form-group row">
     				<div class="col-sm">
 						<input type="text" name="date" class="form-control" id="inputDate" placeholder="Event Date">
