--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@ permalink: /
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
 				<div class="form-group row">
     				<div class="col-sm">
+						<input type="text" name="name" class="form-control" id="inputName" placeholder="Your Name">
+					</div>
+				</div>
+				<div class="form-group row">
+    				<div class="col-sm">
 						<input type="text" name="date" class="form-control" id="inputDate" placeholder="Event Date">
 					</div>
 					<div class="col-sm">
