--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -79,12 +79,17 @@ permalink: /banzo/
 		</div>
 		<div class="clearfix"></div>
 		<div class="col-md-8">
-			<h2 class="title">Event Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
+			<h2 class="title">Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 			
 			<p>Tell us about your event! We'll take care of the rest. *no requesst are confirmed until approval is received from our catering team*</p>
 
 			<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
+				<div class="form-group row">
+    				<div class="col-sm">
+						<input type="text" name="name" class="form-control" id="inputName" placeholder="Your Name">
+					</div>
+				</div>
 				<div class="form-group row">
     				<div class="col-sm">
 						<input type="text" name="date" class="form-control" id="inputDate" placeholder="Event Date">
