--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@ permalink: /
 		<div id="twitter-feed-bg" class="col-md-8 block">
 			<h1 style="padding:15px;">WHAT'S THE BUZZ</h1>
 			<div id="twitter-feed">
-				<a class="twitter-timeline" href="https://twitter.com/BanzoMadison"  data-widget-id="439193312549797888">Tweets by @BanzoMadison</a><br />
-				<script>
-				!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-				</script>
+				<a class="twitter-timeline" data-height="600" href="https://twitter.com/BanzoMadison?ref_src=twsrc%5Etfw">Tweets by BanzoMadison</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
 		</div>
 		<div class="col block d-flex align-items-center">
