--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -81,7 +81,8 @@ permalink: /banzo/
 		<div class="col-md-8">
 			<h2 class="title">Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 			
-			<p>Tell us about your event! We'll take care of the rest. *no requesst are confirmed until approval is received from our catering team*</p>
+			<p>Tell us about your event! We'll take care of the rest.</p>
+			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608)441-2002. Thank you!</p>
 
 			<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
