--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -34,7 +34,7 @@ permalink: /banzo/
 		<div class="col-md pad02vw">
 			<h2 class="title">Order Online</h2>
 			<p>Don't get up.<br>Make an order while sitting right where you are.</p>
-			<a href="https://www.orderinout.com/banzo/madison-east" target="_blank">
+			<a href="https://www.toasttab.com/banzo-sherman-ave/v2/online-order#!/" target="_blank">
 				<button type="button" class="btn btn-dark">ORDER ONLINE</button>
 			</a>
 		</div>
@@ -80,7 +80,7 @@ permalink: /banzo/
 		<div class="clearfix"></div>
 		<div class="col-md-8">
 			<h2 class="title">Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
-			
+
 			<p>Tell us about your event! We'll take care of the rest.</p>
 			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608)441-2002. Thank you!</p>
 
@@ -120,8 +120,8 @@ permalink: /banzo/
 			<div class="map-overlay" onClick="style.pointerEvents='none'"></div>
 			<style>
 			.map-overlay {
-			   background:transparent; 
-			   position:absolute; 
+			   background:transparent;
+			   position:absolute;
 			   width:100%;
 			   height:0; /* your iframe height */
 			   padding-bottom: 44.25%;
