catering form update
added phone number to catering form

--- a/index.html
+++ b/index.html
@@ -46,19 +46,22 @@ permalink: /
 	<div id="menu" class="row justify-content-center collapse">
 		<div class="col-md-8">
 			<h2 class="title">Event Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
-			
+
 			<p>Tell us about your event! We'll take care of the rest.</p>
 			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608)441-2002. Thank you!</p>
 
 			<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
 				<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
 				<div class="form-group row">
-    				<div class="col-sm">
+	    		<div class="col-sm">
 						<input type="text" name="name" class="form-control" id="inputName" placeholder="Your Name">
+					</div>
+					<div class="col-sm">
+						<input type="number" name="phone-number" class="form-control" id="inputPhone" placeholder="Phone Number">
 					</div>
 				</div>
 				<div class="form-group row">
-    				<div class="col-sm">
+    			<div class="col-sm">
 						<input type="text" name="date" class="form-control" id="inputDate" placeholder="Event Date">
 					</div>
 					<div class="col-sm">
