--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -90,6 +90,9 @@ permalink: /banzo/
     				<div class="col-sm">
 						<input type="text" name="name" class="form-control" id="inputName" placeholder="Your Name">
 					</div>
+					<div class="col-sm">
+						<input type="number" name="phone-number" class="form-control" id="inputPhone" placeholder="Phone Number">
+					</div>
 				</div>
 				<div class="form-group row">
     				<div class="col-sm">
