--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -81,7 +81,7 @@ permalink: /food-carts/
 		</div>
 		<div class="col-md-8">
 			<h2 class="title">Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
-			
+
 			<p>Tell us about your event! We'll take care of the rest.</p>
 			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608)441-2002. Thank you!</p>
 
@@ -90,6 +90,9 @@ permalink: /food-carts/
 				<div class="form-group row">
     				<div class="col-sm">
 						<input type="text" name="name" class="form-control" id="inputName" placeholder="Your Name">
+					</div>
+					<div class="col-sm">
+						<input type="number" name="phone-number" class="form-control" id="inputPhone" placeholder="Phone Number">
 					</div>
 				</div>
 				<div class="form-group row">
@@ -121,8 +124,8 @@ permalink: /food-carts/
 			<div class="map-overlay" onClick="style.pointerEvents='none'"></div>
 			<style>
 			.map-overlay {
-			   background:transparent; 
-			   position:absolute; 
+			   background:transparent;
+			   position:absolute;
 			   width:100%;
 			   height:0; /* your iframe height */
 			   padding-bottom: 44.25%;
