--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -91,7 +91,7 @@ permalink: /banzo/
 						<input type="text" name="name" class="form-control" id="inputName" placeholder="Your Name">
 					</div>
 					<div class="col-sm">
-						<input type="number" name="phone-number" class="form-control" id="inputPhone" placeholder="Phone Number">
+						<input type="tel" name="phone-number" class="form-control" id="inputPhone" placeholder="Phone Number">
 					</div>
 				</div>
 				<div class="form-group row">
