--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -92,7 +92,7 @@ permalink: /food-carts/
 						<input type="text" name="name" class="form-control" id="inputName" placeholder="Your Name">
 					</div>
 					<div class="col-sm">
-						<input type="number" name="phone-number" class="form-control" id="inputPhone" placeholder="Phone Number">
+						<input type="tel" name="phone-number" class="form-control" id="inputPhone" placeholder="Phone Number">
 					</div>
 				</div>
 				<div class="form-group row">
