--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -29,6 +29,11 @@ permalink: /food-carts/
 	</div>
 
 	<div id="contact" class="row pad6vw">
+		<div class="row">
+			<div class="col">
+				<h3 class="text-danger">Currently we are closed for the winter season and will re-open on Monday April 2, 2018</h3>
+			</div>
+		</div>
 		<div class="col-md pad02vw">
 			<h2 class="title">LIBRARY MALL<br>(Lake &amp; State St)</h2>
 			<p>Tuesday: 11:00a &ndash; 2:00p<br>
