--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -29,27 +29,25 @@ permalink: /food-carts/
 	</div>
 
 	<div id="contact" class="row pad6vw">
+		<h3 class="text-danger" style="width:100%;">Currently we are closed for the winter season and will re-open on Monday April 2, 2018</h3>
 		<div class="row">
-			<div class="col">
-				<h3 class="text-danger">Currently we are closed for the winter season and will re-open on Monday April 2, 2018</h3>
+			<div class="col-md pad02vw">
+				<h2 class="title">LIBRARY MALL<br>(Lake &amp; State St)</h2>
+				<p>Tuesday: 11:00a &ndash; 2:00p<br>
+					Thursday: 11:00a &ndash; 2:00p
+				</p>
 			</div>
-		</div>
-		<div class="col-md pad02vw">
-			<h2 class="title">LIBRARY MALL<br>(Lake &amp; State St)</h2>
-			<p>Tuesday: 11:00a &ndash; 2:00p<br>
-				Thursday: 11:00a &ndash; 2:00p
-			</p>
-		</div>
-		<div class="col-md pad02vw">
-			<h2 class="title">CAPITAL SQUARE<br>(King &amp; Main St)</h2>
-			<p>Monday: 11:00a &ndash; 2:00p<br>
-				Wednesday: 11:00a &ndash; 2:00p<br>
-				Friday: 11:00a &ndash; 2:00p<br>
-			</p>
-		</div>
-		<div class="col-md pad02vw">
-			<h2 class="title">DANE CO. FARMERS MARKET<br>(2017 Season now closed)</h2>
-			<p>Saturday: 11:00a &ndash; 2:00p</p>
+			<div class="col-md pad02vw">
+				<h2 class="title">CAPITAL SQUARE<br>(King &amp; Main St)</h2>
+				<p>Monday: 11:00a &ndash; 2:00p<br>
+					Wednesday: 11:00a &ndash; 2:00p<br>
+					Friday: 11:00a &ndash; 2:00p<br>
+				</p>
+			</div>
+			<div class="col-md pad02vw">
+				<h2 class="title">DANE CO. FARMERS MARKET<br>(2017 Season now closed)</h2>
+				<p>Saturday: 11:00a &ndash; 2:00p</p>
+			</div>
 		</div>
 	</div>
 
