--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -75,7 +75,162 @@ permalink: /banzo/
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center">
 		<div class="col-md-8">
-			<h2 class="title">Restaurant Menu <a href="/pdf/menu.pdf" target="_blank"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
+			<h2 class="title">Restaurant Menu <a href="/pdf/menu.pdf" target="_blank"><button class="btn btn-dark">MENU.PDF</button></a>
+				<button style="display:none;" data-toggle="collapse" href="#menuCollapse" role="button" aria-expanded="false" aria-controls="menuCollapse" type="button" class="btn btn-dark">MENU.PDF</button></a>
+			</h2>
+		</div>
+		<div class="collapse multi-collapse" id="menuCollapse">
+      <div class="card card-body">
+		 		<div id="banzo-menu" class="row">
+		 			<div class="col-md">
+
+		 <!--WHAT DO YOU WANT-->
+
+		 				<h5 class="menu-headline">What do you want?</h5>
+		 				<p class="menu-ooo">*we use cholesterol-free trans fat-free oil in our fryers.</p>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">The Banzo &#8211; $8.50</p>
+		 					<p class="menu-descript">Classic falafel. Garbanzo beans ground with veggies, herbs and spices.</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">The Chick &#8211; $9.50</p>
+		 					<p class="menu-descript">Marinated chicken tenderloin in our house marinade.</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">The Kebab &#8211; $9.95</p>
+		 					<p class="menu-descript">Traditional hand-made ground beef kebab.</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">The Harvest &#8211; $8.75</p>
+		 					<p class="menu-descript">2 falafel balls with slices of seared eggplant.</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">The Schnitzel &#8211; $9.95</p>
+		 					<p class="menu-descript">Breaded, fried chicken breast with our house seasoning.</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">The F-Bomb &#8211; $9.25</p>
+		 					<p class="menu-descript">2 falafel balls plus choice of marinated chicken or beef kebabs.</p>
+		 				</div>
+
+		 <!--LUNCH SPECIALS-->
+
+		 				<h5 class="menu-headline">Lunch Specials</h5>
+		 				<p class="menu-descript">(11am &#8211; 2pm)</p>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Add a drink + side &#8211; add $3.95</p>
+		 					<p class="menu-descript">(any side PLUS a can of soda, bottled water, or iced tea)</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">2 Banzo Pita Sandwiches &#8211; $15</p>
+		 				</div>
+
+		 <!--DRINKS-->
+
+		 				<h5 class="menu-headline">Drinks</h5>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Soda/water &#8211; $1.75</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Home-brewed Iced Tea &#8211; $1.95</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Izze sparkling fruit juices &#8211; $2</p>
+		 				</div>
+
+		 			</div>
+		 			<div class="col-md">
+
+		 <!--HOW DO YOU WANT IT?-->
+
+		 				<h5 class="menu-headline">How do you want it?</h5>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Pita Sandwich</p>
+		 					<p class="menu-descript">Served in white or whole wheat pita with hummus, chopped salad, chips, pickles and tahini, yogurt or hot sauce. Packaged in our signature Banzo box.</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Platter - (add $2.95)</p>
+		 					<p class="menu-descript">Served on a plate with majadra rice, hummus, chopped salad and a side of white or whole wheat pita.</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Hummus Plate - (add $1.75)</p>
+		 					<p class="menu-descript">Topped over our fresh homemade hummus with tahini, parsley, olive oil, chickpeas &amp; pita bread.</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Salad - (add $2.25)</p>
+		 					<p class="menu-descript">Over a bed of mixed greens topped with chopped salad, olives, chickpeas, and our homemade lemon-agave dressing. Feta cheese optional.</p>
+		 				</div>
+
+		 <!--SIDES-->
+
+		 				<h5 class="menu-headline">Sides</h5>
+		 				<p class="menu-descript">(1 for $3.95 or choose 3 for $10)</p>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Falafel</p>
+		 					<p class="menu-descript">4 crispy falafel balls served w/ tahini sauce</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Couscous tabouli</p>
+		 					<p class="menu-descript">couscous, parsley, tomato, and scallions w/ lemon dressing</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Babaganush</p>
+		 					<p class="menu-descript">roasted eggplant spread; served w/ pita</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Hummus</p>
+		 					<p class="menu-descript">made fresh daily served w/ pita</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Hand-cut fries</p>
+		 					<p class="menu-descript">cut from Wisconsin grown potatoes</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Chopped Salad</p>
+		 					<p class="menu-descript">cucumber &amp; tomato salad w/ house-made dressing</p>
+		 				</div>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Majadra Rice</p>
+		 					<p class="menu-descript">fragrant rice pilaf w/ caramelized onions and lentils</p>
+		 				</div>
+
+		 <!--SOUPS-->
+
+		 				<h5 class="menu-headline">Soup</h5>
+		 				<p class="menu-descript"><strong>Cup</strong> - $2.95 <strong>Bowl</strong> - $4.95 (Served w/ pita chips)</p>
+
+		 				<div class="menu-item">
+		 					<p class="menu-title">Lentil soup</p>
+		 				</div>
+		 				<div class="menu-item">
+		 					<p class="menu-title">Soup of the Day</p>
+		 				</div>
+
+		 			</div>
+		 		</div><!--END #BANZO MENU-->
+      </div>
 		</div>
 		<div class="clearfix"></div>
 		<div class="col-md-8">
@@ -85,32 +240,38 @@ permalink: /banzo/
 			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
 
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col">
 					<form role="form" action="https://formspree.io/catering.banzo@gmail.com" method="POST">
 						<input type="hidden" name="recipient" value="catering.banzo#gmail.com">
-						<div class="form-group">
-							<label for="inputName">Your Name</label>
-							<input type="text" name="name" class="form-control" id="inputName">
-						</div>
-						<div class="form-group">
-							<label for="inputPhone">Phone Number</label>
-							<input type="tel" name="phone-number" class="form-control" id="inputPhone">
-						</div>
-						<div class="form-group">
-							<label for="inputDate">Event Date</label>
-		    			<input type="text" name="date" class="form-control" id="inputDate">
-						</div>
-						<div class="form-group">
-							<label for="inputTime">Event time</label>
-							<input type="text" name="time" class="form-control" id="inputTime">
-						</div>
-						<div class="form-group">
-							<label for="inputGuests">Number of guests</label>
-							<input type="text" name="guest-number" class="form-control" id="inputGuests">
-						</div>
-						<div class="form-group">
-							<label for="inputEmail">Your email</label>
-							<input type="email" name="email" class="form-control" id="inputEmail">
+						<div class="row">
+							<div class="col">
+								<div class="form-group">
+									<label for="inputName">Your Name</label>
+									<input type="text" name="name" class="form-control" id="inputName">
+								</div>
+								<div class="form-group">
+									<label for="inputPhone">Phone Number</label>
+									<input type="tel" name="phone-number" class="form-control" id="inputPhone">
+								</div>
+								<div class="form-group">
+									<label for="inputDate">Event Date</label>
+				    			<input type="text" name="date" class="form-control" id="inputDate">
+								</div>
+							</div>
+							<div class="col">
+								<div class="form-group">
+									<label for="inputTime">Event time</label>
+									<input type="text" name="time" class="form-control" id="inputTime">
+								</div>
+								<div class="form-group">
+									<label for="inputGuests">Number of guests</label>
+									<input type="text" name="guest-number" class="form-control" id="inputGuests">
+								</div>
+								<div class="form-group">
+									<label for="inputEmail">Your email</label>
+									<input type="email" name="email" class="form-control" id="inputEmail">
+								</div>
+							</div>
 						</div>
 						<div class="form-group">
 							<label for="contact-message">Additional information</label>
