--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -75,8 +75,8 @@ permalink: /banzo/
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center">
 		<div class="col-md-8">
-			<h2 class="title">Restaurant Menu <a href="/pdf/menu.pdf" target="_blank"><button class="btn btn-dark">MENU.PDF</button></a>
-				<button style="display:none;" data-toggle="collapse" href="#menuCollapse" role="button" aria-expanded="false" aria-controls="menuCollapse" type="button" class="btn btn-dark">MENU.PDF</button></a>
+			<h2 class="title">Restaurant Menu <!-- <a href="/pdf/menu.pdf" target="_blank"><button class="btn btn-dark">MENU.PDF</button></a> -->
+				<button data-toggle="collapse" href="#menuCollapse" role="button" aria-expanded="false" aria-controls="menuCollapse" type="button" class="btn btn-dark">MENU.PDF</button></a>
 			</h2>
 		</div>
 		<div class="collapse multi-collapse" id="menuCollapse">
@@ -178,43 +178,49 @@ permalink: /banzo/
 
 		 <!--SIDES-->
 
-		 				<h5 class="menu-headline">Sides</h5>
+
+						<h5 class="menu-headline">Sides</h5>
 		 				<p class="menu-descript">(1 for $3.95 or choose 3 for $10)</p>
 
-		 				<div class="menu-item">
-		 					<p class="menu-title">Falafel</p>
-		 					<p class="menu-descript">4 crispy falafel balls served w/ tahini sauce</p>
-		 				</div>
+						<div class="row">
+							<div class="col">
+								<div class="menu-item">
+				 					<p class="menu-title">Falafel</p>
+				 					<p class="menu-descript">4 crispy falafel balls served w/ tahini sauce</p>
+				 				</div>
 
-		 				<div class="menu-item">
-		 					<p class="menu-title">Couscous tabouli</p>
-		 					<p class="menu-descript">couscous, parsley, tomato, and scallions w/ lemon dressing</p>
-		 				</div>
+				 				<div class="menu-item">
+				 					<p class="menu-title">Couscous tabouli</p>
+				 					<p class="menu-descript">couscous, parsley, tomato, and scallions w/ lemon dressing</p>
+				 				</div>
 
-		 				<div class="menu-item">
-		 					<p class="menu-title">Babaganush</p>
-		 					<p class="menu-descript">roasted eggplant spread; served w/ pita</p>
-		 				</div>
+				 				<div class="menu-item">
+				 					<p class="menu-title">Babaganush</p>
+				 					<p class="menu-descript">roasted eggplant spread; served w/ pita</p>
+				 				</div>
 
-		 				<div class="menu-item">
-		 					<p class="menu-title">Hummus</p>
-		 					<p class="menu-descript">made fresh daily served w/ pita</p>
-		 				</div>
+									<div class="menu-item">
+					 					<p class="menu-title">Hummus</p>
+					 					<p class="menu-descript">made fresh daily served w/ pita</p>
+				 				</div>
+							</div>
+							<div class="col">
+				 				<div class="menu-item">
+				 					<p class="menu-title">Hand-cut fries</p>
+				 					<p class="menu-descript">cut from Wisconsin grown potatoes</p>
+				 				</div>
 
-		 				<div class="menu-item">
-		 					<p class="menu-title">Hand-cut fries</p>
-		 					<p class="menu-descript">cut from Wisconsin grown potatoes</p>
-		 				</div>
+				 				<div class="menu-item">
+				 					<p class="menu-title">Chopped Salad</p>
+				 					<p class="menu-descript">cucumber &amp; tomato salad w/ house-made dressing</p>
+				 				</div>
 
-		 				<div class="menu-item">
-		 					<p class="menu-title">Chopped Salad</p>
-		 					<p class="menu-descript">cucumber &amp; tomato salad w/ house-made dressing</p>
-		 				</div>
-
-		 				<div class="menu-item">
-		 					<p class="menu-title">Majadra Rice</p>
-		 					<p class="menu-descript">fragrant rice pilaf w/ caramelized onions and lentils</p>
-		 				</div>
+				 				<div class="menu-item">
+				 					<p class="menu-title">Majadra Rice</p>
+				 					<p class="menu-descript">fragrant rice pilaf w/ caramelized onions and lentils</p>
+				 				</div>
+							</div>
+						</div>
 
 		 <!--SOUPS-->
 
