--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -75,8 +75,8 @@ permalink: /banzo/
 
 	<div id="menu" class="row pad6vw d-flex justify-content-center">
 		<div class="col-md-8">
-			<h2 class="title">Restaurant Menu <!-- <a href="/pdf/menu.pdf" target="_blank"><button class="btn btn-dark">MENU.PDF</button></a> -->
-				<button data-toggle="collapse" href="#menuCollapse" role="button" aria-expanded="false" aria-controls="menuCollapse" type="button" class="btn btn-dark">MENU.PDF</button></a>
+			<h2 class="title">Restaurant Menu <a href="/pdf/menu.pdf" target="_blank"><button class="btn btn-dark">MENU.PDF</button></a>
+				<button style="display:none;" data-toggle="collapse" href="#menuCollapse" role="button" aria-expanded="false" aria-controls="menuCollapse" type="button" class="btn btn-dark">MENU.PDF</button></a>
 			</h2>
 		</div>
 		<div class="collapse multi-collapse" id="menuCollapse">
