--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -89,9 +89,10 @@ permalink: /banzo/
 
 			 				<h5 class="menu-headline">What do you want?</h5>
 			 				<p class="menu-ooo">*we use cholesterol-free trans fat-free oil in our fryers.</p>
+							<p class="menu-ooo"><vegan><span>v</span></vegan> = vegan</p>
 
 			 				<div class="menu-item">
-			 					<p class="menu-title">The Banzo &#8211; $8.50 <vegan><p>v</p></vegan></p>
+			 					<p class="menu-title">The Banzo &#8211; $8.50 <vegan><span>v</span></vegan></p>
 			 					<p class="menu-descript">Classic falafel. Garbanzo beans ground with veggies, herbs and spices.</p>
 			 				</div>
 
@@ -106,7 +107,7 @@ permalink: /banzo/
 			 				</div>
 
 			 				<div class="menu-item">
-			 					<p class="menu-title">The Harvest &#8211; $8.75 <vegan><p>v</p></vegan></p>
+			 					<p class="menu-title">The Harvest &#8211; $8.75 <vegan><span>v</span></vegan></p>
 			 					<p class="menu-descript">2 falafel balls with slices of seared eggplant.</p>
 			 				</div>
 
@@ -120,7 +121,7 @@ permalink: /banzo/
 			 					<p class="menu-descript">2 falafel balls plus choice of marinated chicken or beef kebabs.</p>
 			 				</div>
 			 				<div class="menu-item">
-			 					<p class="menu-title">The Batata &#8211; $9.00 <vegan><p>v</p></vegan></p>
+			 					<p class="menu-title">The Batata &#8211; $9.00 <vegan><span>v</span></vegan></p>
 			 					<p class="menu-descript">Fresh ground sweet potato falafel.</p>
 			 				</div>
 			 				<div class="menu-item">
@@ -266,11 +267,6 @@ permalink: /banzo/
 			 				</div>
 
 			 			</div>
-					</div>
-					<div class="row">
-						<div class="col">
-							<vegan><p>v</p></vegan> = vegan
-						</div>
 					</div>
 		 		</div><!--END #BANZO MENU-->
       </div>
