--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -87,7 +87,7 @@ permalink: /banzo/
 
 			 				<!--WHAT DO YOU WANT-->
 
-			 				<h5 class="menu-headline">What do you want?</h5>
+			 				<h5 class="menu-headline">1. What do you want?</h5>
 			 				<p class="menu-ooo">*we use cholesterol-free trans fat-free oil in our fryers.</p>
 							<p class="menu-ooo"><vegan><span>v</span></vegan> = vegan</p>
 
@@ -176,7 +176,7 @@ permalink: /banzo/
 
 			 <!--HOW DO YOU WANT IT?-->
 
-			 				<h5 class="menu-headline">How do you want it?</h5>
+			 				<h5 class="menu-headline">2. How do you want it?</h5>
 
 			 				<div class="menu-item">
 			 					<p class="menu-title">Pita Sandwich</p>
