--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -271,7 +271,7 @@ permalink: /banzo/
 			</div><!--END #BANZO MENU-->
 		</div>
 		<div class="clearfix"></div>
-		<div class="col-md-8">
+		<div id="catering" class="col-md-8">
 			<h2 class="title">Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 
 			<p>Tell us about your event! We'll take care of the rest.</p>
