--- a/_pages/food-carts.html
+++ b/_pages/food-carts.html
@@ -80,7 +80,7 @@ permalink: /food-carts/
 		<div class="col-md-8">
 			<h2 class="title">Food Cart @ CAPITAL SQUARE <a href="/pdf/capitalSquare-daytonCharter.pdf" target="_blank"><button type="button" class="btn btn-dark">MENU.PDF</button></a></h2>
 		</div>
-		<div class="col-md-8">
+		<div id="catering" class="col-md-8">
 			<h2 class="title">Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 
 			<p>Tell us about your event! We'll take care of the rest.</p>
