--- a/_pages/banzo.html
+++ b/_pages/banzo.html
@@ -272,7 +272,7 @@ permalink: /banzo/
 		</div>
 		<div class="clearfix"></div>
 		<div id="catering" class="col-md-8">
-			<h2 class="title">Catering <a href="/pdf/catering.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
+			<h2 class="title">Catering <a href="/pdf/banzocateringmenu.pdf" target="_blank"><button type="button" class="btn btn-dark">CATERING MENU.PDF</button></a></h2>
 
 			<p>Tell us about your event! We'll take care of the rest.</p>
 			<p>*No requests are confirmed until approval is received from our catering team. Please allow up to 2 business days for a response from our catering team. DO NOT submit duplicate requests via email or phone. If your event requires immediate confirmation, please skip this form and call (608) 441-2002. Thank you!</p>
