--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -3,10 +3,7 @@ layout: homepage
 permalink: /hpv2/
 ---
 <nav class="navbar navbar-expand-lg navbar-hp">
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarText">
+	<div class="navbar-collapse" id="navbarText">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
 				<a class="nav-link" href="/banzo/">Restaurant</a>
