--- a/_pages/hpv2.html
+++ b/_pages/hpv2.html
@@ -13,7 +13,7 @@ permalink: /hpv2/
 			</li>
 		</ul>
 		<span class="navbar-text">
-			Call <tel>(608) 441-2002</tel>
+			Open 7 days 11am - 9pm | <i class="fas fa-phone"></i> <tel>(608) 441-2002</tel>
 		</span>
 	</div>
 </nav>
